<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Eating Like A Boss!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login">Login</string>
    <string name="login2">Log in</string>
    <string name="register">Register</string>
    <string name="numberclienthint">Enter number</string>
    <string name="passwordhint">Enter password</string>
    <string name="namehint">Enter name</string>
    <string name="home">Home</string>
    <string name="changeprofile">Change profile</string>
    <string name="lookforarestaurant">Look for a restaurant</string>
    <string name="search">Search</string>
    <string name="location">Enable location</string>
    <string name="profile">Profile</string>
    <string name="passwordchangehint">Change password</string>
    <string name="disabled">Disabled</string>
    <string name="favouriterestaurants">Favourite restaurants</string>
    <string name="client">Client</string>
    <string name="restaurantowner">Restaurant Owner</string>
    <string name="change">Change</string>
    <string name="favouritetyperestaurants">Favourite type of restaurants</string>
    <string name="addrestaurant">Add restaurant</string>
    <string name="add">Add</string>
    <string name="removerestaurant">Remove restaurant</string>
    <string name="remove">Remove</string>
    <string name="list">List</string>
    <string name="addtype">Add type</string>
    <string name="removetype">Remove type</string>
    <string name="profilefavouriterestaurants">Profile: Favourite restaurants</string>
    <string name="profilefavouritetypeofrestaurants">Profile: Favourite type of restaurants</string>
    <string name="orderby">Order by:</string>
    <string name="alphabetically">Alphabetically</string>
    <string name="proximity">Proximity</string>
    <string name="locatedin">Located in:</string>
    <string name="city">City</string>
    <string name="showonlyfavouritetypes">Show only favourite types:</string>
    <string name="empty">" "</string>
    <string name="searchrefresh">Search/Refresh</string>
    <string name="findarestaurant">Find a restaurant:</string>
    <string name="onlyfavouriterestaurants">Only favourite restaurants</string>
    <string name="restaurant">Restaurant</string>
    <string name="addchangesettingsrestaurant">Add restaurant/Change settings restaurant</string>
    <string name="menu">Menu</string>
    <string name="price">"Price: "</string>
    <string name="listofmeals">List of meals:</string>
    <string name="meal">Meal</string>
    <string name="listofingredients">List of ingredients:</string>
    <string name="available">Available:</string>
    <string name="picture">Picture:</string>
    <string name="disabledpeopleacces">Disabled people access:</string>
    <string name="reservation">Reservation</string>
    <string name="numberofplaces">Number of places:</string>
    <string name="typeofplaces">Type of places:</string>
    <string name="numberofplaceshint">Enter number of places</string>
    <string name="typeofplaceshint">Enter type of places (inside/outside)</string>
    <string name="dateandhour">Date &amp; Hour:</string>
    <string name="dateandhourhint">Enter date &amp; hour</string>
    <string name="optional">Optional</string>
    <string name="listofmenus">List of menus</string>
    <string name="listofmenusplusquantity">List of menus &amp; quantity:</string>
    <string name="addmenuquantity">Add menu &amp; quantity</string>
    <string name="listofmealsplusquantity">List of meals &amp; quantity</string>
    <string name="addmealquantity">Add meal &amp; quantity</string>
    <string name="makereservation">Make reservation</string>
    <string name="meals">Meals</string>
    <string name="numberofmeals">Number of meals:</string>
    <string name="numberofmealshint">Enter number of meals</string>
    <string name="meal2">Meal:</string>
    <string name="mealchosenhint">Meal chosen</string>
    <string name="menus">Menus</string>
    <string name="numberofmenus">Number of menus</string>
    <string name="menu2">Menu:</string>
    <string name="numberofmenushint">Enter number of menus</string>
    <string name="menuchosenhint">Menu chosen</string>
    <string name="address">Address:</string>
    <string name="city2">City:</string>
    <string name="street">Street:</string>
    <string name="number">Number:</string>
    <string name="newmember">New?</string>
    <string name="typeresto">Type(s):</string>
    <string name="daysandhoursopen">Days and hours open:</string>
    <string name="discription">Description:</string>
    <string name="typeplacesnumberplaces">Type of places/Number places:</string>
    <string name="paymentmethods">Payment methods:</string>
    <string name="listofmeals2">List of meals</string>
    <string name="listofmenus2">List of menus</string>
    <string name="pictures">Pictures</string>
    <string name="addmeal">Add meal</string>
    <string name="removemeal">Remove meal</string>
    <string name="addmenu">Add menu</string>
    <string name="removemenu">Remove menu</string>
    <string name="addpicture">Add picture</string>
    <string name="removepicture">Remove picture</string>
    <string name="number2">Number:</string>
    <string name="name2">Name: </string>
    <string name="hideunlikedtypes">Hide unliked types:</string>
    <string name="find">Find</string>
    <string name="cityoptional">City (optional)</string>
    <string name="pricehint">Enter price</string>
    <string name="yesnohint">Yes/No?</string>
    <string name="addigredient">Add ingredient:</string>
    <string name="ingredienthint">Enter name ingredient</string>
    <string name="addingriedient">Add ingredient</string>
    <string name="addmeal2">Add meal:</string>
    <string name="mealhint">Enter name meal</string>
    <string name="menuadd">Menu add</string>
    <string name="menuremove">Menu remove</string>
    <string name="mealadd">Meal add</string>
    <string name="mealremove">Meal remove</string>
    <string name="yes">Yes?</string>
    <string name="addpaymentmethod">Add payment method</string>
    <string name="addtypenumberplaceshint">Add type/number places (ex: inside/8)</string>
    <string name="typehint">Enter type</string>
    <string name="dayhint">Enter day</string>
    <string name="houropen">Enter opening hour</string>
    <string name="hourclosedhint">Enter closing hour</string>
    <string name="typeplaceshint">Enter type of places</string>
    <string name="numberplaceshint">Enter number of places</string>
    <string name="namerestaurant">Enter name restaurant</string>
    <string name="typerestauranthint">Enter type of restaurant</string>
    <string name="street2">Street:</string>
    <string name="spinner_title">Pick a favourite restaurant</string>
    <string name="password">Password:</string>

</resources>